--- a/projects/administration-portal/src/app/core/header/header.component.html
+++ b/projects/administration-portal/src/app/core/header/header.component.html
@@ -8,9 +8,15 @@
       </div>
       <nav class="menu__body">
         <ul class="menu__list">
-          <li><a href="" class="menu__link">Заказы</a></li>
-          <li><a href="" class="menu__link">Продукты</a></li>
-          <li><a href="" class="menu__link">Клиенты</a></li>
+          <li>
+            <a href="#" class="menu__link">Заказы</a>
+          </li>
+          <li>
+            <a href="#" class="menu__link">Продукты</a>
+          </li>
+          <li>
+            <a href="#" class="menu__link">Клиенты</a>
+          </li>
         </ul>
       </nav>
     </div>
