--- a/projects/administration-portal/src/app/scss/abstracts/_variables.scss
+++ b/projects/administration-portal/src/app/scss/abstracts/_variables.scss
@@ -10,7 +10,13 @@ $md4: 479.98px;
 // Default Colors
 $shadow-gray: rgba(99, 99, 99, 0.25) !default;
 
+$dark-gray: #4F4F4F !default;
 $light-gray: #AEAEAE !default;
+$gray-stroke: #E7E8EB !default;
+$medium-gray: #9A9797 !default;
+$lightest-gray: #dee2e6 !default;
+$lightest-gray-alfa: #dee2e636 !default;
+
 
 $light-orange: #fbc88c !default;
 $base-orange: #f8b569 !default;
