--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -3,13 +3,7 @@
     <h1 class="order-list__title title">Заказы</h1>
 
     <div class="order-list__tab-menu tab-menu">
-      <div class="tab-menu__content">
-        <ul class="tab-menu__list">
-          <li class="tab-menu__item"><a href="" class="tab-menu__link">В обработке</a></li>
-          <li class="tab-menu__item"><a href="" class="tab-menu__link tab-menu__link--active">Все Заказы</a></li>
-          <li class="tab-menu__item"><a href="" class="tab-menu__link">Завершённые</a></li>
-        </ul>
-      </div>
+      <app-tab-menu></app-tab-menu>
     </div>
 
     <div class="order-list__toolbar toolbar">
@@ -19,21 +13,21 @@
           <button class="toolbar__btn btn">
             <img 
               class="toolbar__btn-icon" 
-              src="../../../../assets/icons/filter.png"
+              src="/assets/icons/filter.png"
             >
             Фильтр
           </button>
           <button class="toolbar__btn btn">
             <img 
               class="toolbar__btn-icon" 
-              src="../../../../assets/icons/attachment.png"
+              src="/assets/icons/attachment.png"
             >
             Прикрепить
           </button>
           <button class="toolbar__btn btn">
             <img 
               class="toolbar__btn-icon" 
-              src="../../../../assets/icons/export.png"
+              src="/assets/icons/export.png"
             >
             Экспорт
           </button>
