setup routing for child modules

--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.html
@@ -8,7 +8,11 @@
 
     <div class="order-list__toolbar toolbar">
       <div class="toolbar__row">
-        <input placeholder="Поиск по Идентификатору, Email, Продукту и другому" class="toolbar__search"/>
+        <div class="toolbar__search-container">
+          <img class="toolbar__search-image" src="/assets/icons/search.png"/>
+          <input placeholder="Поиск по Идентификатору, Email, Продукту и другому" class="toolbar__search"/>
+        </div>
+
         <div class="toolbar__controls">
           <button class="toolbar__btn btn">
             <img 
