--- a/projects/administration-portal/src/app/core/header/header.component.html
+++ b/projects/administration-portal/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
       <nav class="menu__body">
         <ul class="menu__list">
           <li>
-            <a href="#" class="menu__link">Заказы</a>
+            <a routerLink="/orders" class="menu__link">Заказы</a>
           </li>
           <li>
             <a href="#" class="menu__link">Продукты</a>
