--- a/projects/administration-portal/src/app/shared/components/tab-menu/tab-menu.component.html
+++ b/projects/administration-portal/src/app/shared/components/tab-menu/tab-menu.component.html
@@ -1,7 +1,13 @@
 <div class="tab-menu__content">
   <ul class="tab-menu__list">
-    <li class="tab-menu__item"><a href="" class="tab-menu__link">В обработке</a></li>
-    <li class="tab-menu__item"><a href="" class="tab-menu__link tab-menu__link--active">Все Заказы</a></li>
-    <li class="tab-menu__item"><a href="" class="tab-menu__link">Завершённые</a></li>
+    <li class="tab-menu__item">
+      <a href="" class="tab-menu__link">В обработке</a>
+    </li>
+    <li class="tab-menu__item">
+      <a href="" class="tab-menu__link tab-menu__link--active">Все Заказы</a>
+    </li>
+    <li class="tab-menu__item">
+      <a href="" class="tab-menu__link">Завершённые</a>
+    </li>
   </ul>
 </div>
