--- a/projects/administration-portal/src/app/shared/components/tab-menu/tab-menu.component.scss
+++ b/projects/administration-portal/src/app/shared/components/tab-menu/tab-menu.component.scss
@@ -21,6 +21,7 @@
     }
 
 	&__link { 
+        cursor: pointer;
         display: inline-block;
         border-bottom: 2px solid $lightest-gray;
         background: white;
