--- a/projects/administration-portal/src/app/components/orders/order-list/order-list.component.scss
+++ b/projects/administration-portal/src/app/components/orders/order-list/order-list.component.scss
@@ -10,10 +10,12 @@
     }
 
 	&__tab-menu { 
+        display: block;
         margin: 0px 0px 25px 0px;
     }
 
-	&__toolbar { 
+	&__toolbar {
+        display: block;
         background-color: #fbfbfb;
         border-radius: 7px;
         margin: 0px 0px 35px 0px;
@@ -29,136 +31,4 @@
         align-items: center;
         justify-content: center;
     }
-}
-
-.toolbar {
-    &__row {
-        display: flex;
-        align-items: center;
-        height: 60px;
-        padding: 0px 25px;
-    }
-
-    &__search-container { 
-        position: relative;
-        margin: 0px 25px 0px 0px;
-        
-        flex: 1 1 auto;
-    }
-
-    &__search-image { 
-        position: absolute;
-        top: 8px;
-        left: 10px;
-    }
-
-	&__search {
-        width: 100%;
-        padding: 8px 40px;
-        border: 1px solid $gray-stroke;
-        border-radius: 4px;
-
-        font-size: 0.875rem;
-        font-weight: 400;
-        color: $light-gray;
-    }
-
-    &__controls {
-        display: flex;
-        justify-content: space-between;
-
-        flex: 0 1 34%;
-    }
-
-    &__btn-icon {
-        width: 20px;
-        height: 20px;
-        margin-right: 5px;
-    }
-}
-
-.pagination {
-	&__items { 
-        display: flex;
-        flex-direction: row;
-    }
-
-    &__item {
-        margin: 0px 0px 0px 8px;
-    }
-
-	&__btn {
-        width: 35px;
-        height: 35px;
-        border-radius: 4px;
-        font-size: 1rem;
-        font-weight: 700;
-        line-height: 1.42;
-        color: $dark-gray;
-        background-color: white;
-        border: 1px solid $gray-stroke;
-        transition: border-color .3s ease 0s;
-
-		&--arrow-left,
-        &--arrow-right { 
-            position: relative;
-        }
-
-        &--arrow-right::before {
-            display: inline-block;
-            content: '';
-            background: url('/assets/icons/vector-right.png') no-repeat;
-            background-size: 7.41px 12px;
-            height: 12px;
-            width: 7.41px;
-            margin: 5px 0px 0px 2px;
-        }
-
-        &--arrow-left::before {
-            display: inline-block;
-            content: '';
-            background: url('/assets/icons/vector-left.png') no-repeat;
-            background-size: 7.41px 12px;
-            height: 12px;
-            width: 7.41px;
-            margin: 5px 2px 0px 0px;
-        }
-
-		&--number { }
-		&--more { }
-
-        &:hover {
-            border-color: #9b9a9a;
-        }
-
-        &--disabled {
-            background-color: $gray-stroke;
-        }
-	}
-}
-
-.btn { 
-    background: white;
-    border: 1px solid $gray-stroke;
-    border-radius: 4px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 0.875rem;
-    font-weight: 400;
-    padding: 0.5rem 0.5625rem;
-    color: $light-gray;
-    transition: border-color 0.3s ease 0s, color 0.3s ease 0s;
-
-    &:hover {
-        border-color: #9b9a9a;
-        color: #9b9a9a; 
-    }
-}
-
-.title { 
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: $light-orange;
 }
