--- a/projects/administration-portal/src/app/shared/components/tab-menu/tab-menu.component.html
+++ b/projects/administration-portal/src/app/shared/components/tab-menu/tab-menu.component.html
@@ -7,6 +7,7 @@
       >
         <a 
           class="tab-menu__link"
+          routerLink = menuItem.routerLink
           [ngClass]="{ 'tab-menu__link--active': menuItem.isSelected }" 
         >{{ menuItem.label }}</a>
       </li>
