--- a/projects/administration-portal/src/app/core/header/header.component.html
+++ b/projects/administration-portal/src/app/core/header/header.component.html
@@ -12,10 +12,10 @@
             <a routerLink="/orders" class="menu__link">Заказы</a>
           </li>
           <li>
-            <a href="#" class="menu__link">Продукты</a>
+            <a routerLink="/confections" class="menu__link">Продукты</a>
           </li>
           <li>
-            <a href="#" class="menu__link">Клиенты</a>
+            <a routerLink="/clients" class="menu__link">Клиенты</a>
           </li>
         </ul>
       </nav>
