--- a/projects/administration-portal/src/app/core/header/header.component.scss
+++ b/projects/administration-portal/src/app/core/header/header.component.scss
@@ -1,37 +1,123 @@
 @import 'projects/administration-portal/src/app/scss/abstracts/variables';
 
 .header {
-	&__content { }
-	&__menu { }
-}
-
-.menu {
-	&__icon { }
-	&__body { }
-	&__list { 
+	&__menu { 
         display: flex;
         justify-content: flex-end;
         align-items: center;
         height: 82px;
         padding: 10px 0;
+        position: relative;
+        z-index: 10;
+    }
+}
+
+.menu {
+	&__list { 
+        display: flex;
 
         li {
             margin: 0px 0px 0px 33px;
         }
     }
+
 	&__link { 
         font-size: 20px;
         font-weight: 500;
         color: #000;
         transition: color 0.3s ease 0s;
-        @media (min-width: $md2) {
+
+        @media (min-width: $md3) {
             &:hover {
                 color: $light-orange;
             }
         }
     }
+
+    &__icon {
+        display: none;
+    }
 }
 
-.icon-menu { 
-    display: none;
+@media (max-width: $md3) {
+    .header {
+        &__menu {
+            height: 50px;
+        }
+    }
+
+    .menu {
+        &__body {
+            transform: translate(0px, -100%);
+            transition: transform 0.5s ease 0s;
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            z-index: 5;
+            padding: 60px 10px 30px 10px;
+            background-color: rgba(255, 255, 255, 0.9);
+            &.active {
+                transform: translate(0px, 0%);
+            }
+        }
+
+        &__list {
+            display: block;
+            
+            li {
+                margin: 0px 0px 40px 0px;
+            }
+        }
+
+        &__link {
+            display: block;
+            
+            font-size: 30px;
+            text-align: center;
+        }
+    }
+
+    .icon-menu {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 18px;
+        cursor: pointer;
+        z-index: 10;
+
+        span {
+            transition: all 0.3s ease 0s;
+            top: calc(50% - 1px);
+            left: 0px;
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: black;
+            &:first-child {
+                top: 0px;
+            }
+            &:last-child {
+                top: auto;
+                bottom: 0;
+            }
+        }
+
+        &.active {
+            span {
+                transform: scale(0);
+                &:first-child {
+                    transform: rotate(-45deg);
+                    top: calc(50% - 1px);
+                }
+                &:last-child {
+                    transform: rotate(45deg);
+                    bottom: calc(50% - 1px);
+                }
+            }
+        }
+    }
 }
